--- a/src/App.scss
+++ b/src/App.scss
@@ -62,6 +62,8 @@ html, body, #root {
 .dialog {
   height: 200px;
   width: 150px;
+  margin-left: auto;
+  margin-right: auto;
   border: 1px solid grey;
   animation: cardflip 4s ease;
   display: flex;
