Enabled Caching Card Progress + Prompts for Refresh and Close

--- a/src/App.scss
+++ b/src/App.scss
@@ -32,12 +32,12 @@ html, body, #root {
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      color: $light-color;
+      // color: $light-color;
     }
 
     &__white_div {
       text-align: center;
-      color: $light-color;
+      // color: $light-color;
     }
 
     &__qrcode {
