--- a/src/App.scss
+++ b/src/App.scss
@@ -25,7 +25,7 @@ html, body, #root {
     }
     div{
       text-align: center;
-      //color: $light-color;
+      // color: $light-color;
     }
 
     span{
@@ -37,7 +37,7 @@ html, body, #root {
 
     &__white_div {
       text-align: center;
-      // color: $light-color;
+      color: $light-color;
     }
 
     &__qrcode {
