Fixing Styling + Removing Unused Imports

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,7 +13,7 @@ html, body, #root {
 
 .home {
   height:100%;
-  overflow: hidden;
+  overflow: auto;
   background-color: $text-color;
   background-repeat: no-repeat;
 
