--- a/src/App.scss
+++ b/src/App.scss
@@ -16,6 +16,7 @@ html, body, #root {
   overflow: auto;
   background-color: $text-color;
   background-repeat: no-repeat;
+  padding-bottom: 300px;
 
   h1{
     padding-top: 80px;
